# pybap

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
pybap/: app.py  arcgis.py  version.py
pybap/assets/: BAP_Excel_Vals.xlsx
pybap/static/css/: main.css
pybap/templates/: base.jinja2  index.jinja2
