[build-system]
requires = ['setuptools'
            ,'numpy'
            ,'pandas'
            ,'shapely'
            ,'python-docx'
            ,'openpyxl'
            ,'gdal==3.4.3'
            ,'flask'
            ,'geopandas']
build-backend = "setuptools.build_meta"

[project]
name = "pybap"
authors = [{"name"="kevin johns", "email"="kevin.johns@hdrinc.com"}]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pybap.__version__"}

[project.scripts]
#ssay = "snakesay.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
# Specify the package name and the files to include
pybap = ["static/**", "templates/**", "assets/**"]